--- a/doc/sup/tex/10.algorithmic_flow.tex
+++ b/doc/sup/tex/10.algorithmic_flow.tex
@@ -14,9 +14,7 @@
 %\titlespacing{\section}{0pt}{*0}{*0}\titlespacing{\subsection}{0pt}{*0}{*0}\titlespacing{\subsubsection}{0pt}{*0}{*0}
 %\parbox[t]{\textwidth}{
 
-			The simulation
-			\footnote{\scriptsize{Computations were made on the supercomputing cluster Guillimin from McGill University, managed by Calcul Québec and Compute Canada. The operation of these supercomputers is funded by the Canada Foundation for Innovation (CFI), ministère de l’Économie, de la Science et de l’Innovation du Québec (MESI) and the Fonds de recherche du Québec - Nature et technologies (FRQ-NT).}}
-            has the parameter tolerance $t$, expressed as percentages of total edges,  indicating the total number damaging interactions to
+			The simulation has the parameter tolerance $t$, expressed as percentages of total edges,  indicating the total number damaging interactions to
 			be tolerated (equivalently, the knapsack capacity $c$ in the
 			corresponding KOP instance).
 			For each network, the simulation is carried out under maximum pressure (non-zero OA on every gene)
