--- a/doc/sup/tex/32.sim_adapt.tex
+++ b/doc/sup/tex/32.sim_adapt.tex
@@ -38,7 +38,7 @@
 \newpage
 %when bibtex
 \bibliography{/Users/unbaxabl/Downloads/Publishing/z-misc/zotero-library/better_bibtex_standalone}
-\bibliographystyle{naturemag}
+\bibliographystyle{vancouver}
 
 \end{document}
 %end_custom_content
