--- a/doc/tex/09_Results.tex
+++ b/doc/tex/09_Results.tex
@@ -1,7 +1,5 @@
 \section{Results}
-    Here we summarize the results presented in subsequent subsections. We empirically study NEP instances obtained by generating hypothetical OAs on various MINs and compare that with instances on synthetic networks of various topologies. We assess instance difficulty assuming the working algorithm is RVnRS. The results show instances obtained from  real MINs are invariably far easier to satisfy by virtue of the mLmH property, as real MINs have far less ambiguous genes per instance. The large number of low-degree leaf genes in MINs reduces  instance size because such genes are certain (degree 1) or likely (degree 2, 3, .. with exponentially decreasing likelihood) to have all-beneficial  (all-damaging)interactions and should therefore be conserved (mutated/deleted) regardless. Such unambiguous genes need not be considered in the computationally costly optimization search. For example, a leaf gene involved in only one interaction (i.e. it has degree 1)  can either be totally beneficial or totally damaging  under a given evolutionary pressure scenario, and as such there is no ambiguity as to whether it should be conserved or mutated/deleted. A gene of degree 2 has a 50\% chance of being unambiguous: the two interactions it is engaged in are either both beneficial or both damaging\footnote{
-        A degree-2 gene is engaged in two interactions. There are four possibilities of the state of the two interactions are (0,0), (0,1), (1,0) and (1,1) where 1 or 0 denote an interaction is beneficial or damaging respectively.
-    }.  In general, a gene of degree $d$ has a $\frac{2}{2^d} = 2^{d-1}$ probability of being unambiguous.
+    Here we summarize the results presented in subsequent subsections. We empirically study NEP instances obtained by generating hypothetical OAs on various MINs and compare that with instances on synthetic networks of various topologies. We assess instance difficulty assuming the working algorithm is RVnRS. The results show instances obtained from  real MINs are invariably far easier to satisfy by virtue of the mLmH property, as real MINs have far less ambiguous genes per instance. The large number of low-degree leaf genes in MINs reduces  instance size because such genes are certain (degree 1) or likely (degree 2, 3, .. with exponentially decreasing likelihood) to have all-beneficial  (all-damaging)interactions and should therefore be conserved (mutated/deleted) regardless. Such unambiguous genes need not be considered in the computationally costly optimization search. For example, a leaf gene involved in only one interaction (i.e. it has degree 1)  can either be totally beneficial or totally damaging  under a given evolutionary pressure scenario, and as such there is no ambiguity as to whether it should be conserved or mutated/deleted. A gene of degree 2 has a 50\% chance of being unambiguous: the two interactions it is engaged in are either both beneficial or both damaging (a degree-2 gene is engaged in two interactions. There are four possibilities of the state of the two interactions are (0,0), (0,1), (1,0) and (1,1) where 1 or 0 denote an interaction is beneficial or damaging respectively).  In general, a gene of degree $d$ has a $\frac{2}{2^d} = 2^{d-1}$ probability of being unambiguous.
 
     %Furthermore, as leaves minimally consume the tolerance threshold,  more hubs can be conserved for their benefits and despite their damages.  A hub gene can single-handedly contribute a large portion of the total beneficial interactions, allowing for  the packing of more beneficial interactions with less genes to conserve/delete.
 
