--- a/doc/tex/main.tex
+++ b/doc/tex/main.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt]{article}
+\bibliographystyle{vancouver}
 %\documentclass{article}
 \input{../tex/00_preamble.tex}
 \usepackage{times}
@@ -75,8 +76,6 @@
 \newpage
 
 \bibliography{/Users/unbaxabl/Downloads/Publishing/z-misc/zotero-library/better_bibtex_standalone}
-\bibliographystyle{naturemag}
-
 \clearpage
 
 \end{document}
