--- a/doc/sup/tex/03.real_nets_1_PPIs.tex
+++ b/doc/sup/tex/03.real_nets_1_PPIs.tex
@@ -1,4 +1,4 @@
-\input{/Users/unbaxabl/Downloads/Publishing/Papers/Paper_01/NatSysBio/sup/tex/01.preamble.tex}
+\input{/Volumes/DataHub/Publishing/Papers/Paper_01/NatSysBio/sup/tex/01.preamble.tex}
 %begin_custom_header
 %end_custom_header
 \begin{document}
@@ -9,7 +9,7 @@
     Table \ref{tab:networks_summary_PPI}  shows the details and references of protein-protein interaction (PPI) networks (raw data and source code available in  \cite{atiia_case-study_2017}).
     PPI networks represent a "universe of possibilities", where combinatorial experiments test the affinity of each protein against all others in (typically, in large-scale experiments) exogenous settings. Widely used experimental methods include yeast two-hybrid (Y2H) and affinity purification followed by Mass spectrometry (AP-MS). Examining the literature references in Table \ref{tab:networks_summary_PPI} in chronological order of publication dates (ranging from 2008-2016), one observes a rapid increase in the scale  and resolution  of high-throughput methods with works by Rolland et \textit{al.}  \cite{rolland_proteome-scale_2014} and Yang et \textit{al.}  \cite{yang_widespread_2016} representing the cutting edge in terms of coverage and resolution respectively.
     In  \cite{yang_widespread_2016}, it was shown that different isoforms of the same protein can exhibit quite different interaction profiles. Therefore the degree of a gene (particularly hub genes) may in fact be inflated in networks where isoforms are not distinguished: that gene should ideally be broken down to separate nodes corresponding to each isoform.
-    Typically, further validation of the resulting networks is conducted on a subset of interactions by testing their affinity in endogenous setting (which in turn is used to calculate some measure of true/false positives/negatives or some combination of such ratios) or comparing the resulting interactions to (small) gold standard data sets. It is important to note that PPI networks are generally undirected, since the experimental methods only establish the existence of an interaction but reveal nothing about the type (whether promotional or inhibitory) or directionality (which of the two proteins affects the other) of an interaction. The Fly network is the one exception, as both the direction and type of its interactions have been assessed using a simple prediction algorithm which achieved "90\% precision and 41\% recall (2.8\% false positive rate and 59\% false negative rate)"  \cite{vinayagam_integrating_2014}.
+    Typically, further validation of the resulting networks is conducted on a subset of interactions by testing their affinity in endogenous setting (which in turn is used to calculate some measure of true/false positives/negatives or some combination of such ratios) or comparing the resulting interactions to (small) gold standard data sets. It is important to note that PPI networks are generally undirected, since the experimental methods only establish the existence of an interaction but reveal nothing about the type (whether promotional or inhibitory) or directionality (which of the two proteins affects the other) of an interaction. The Fly network is the one exception, as both the direction and type of its interactions have been assessed using a simple prediction algorithm which achieved "90\% precision and 41\% recall (2.8\% false positive rate and 59\% false negative rate)"  \cite{vinayagam_integrating_2014}. The direction and sign of interactions in undirected and/or unsigned networks were assigned at random (coin flip). 
     %All of PPI networks in this study were mapped using the yeast two-hybrid (Y2H) experimental method with the exception of Fly which was generated using RNA interference (RNAi) screens.
     Figure SI \ref{fig:deg_dist_PPI} shows the degree distribution of PPI networks and their corresponding synthetic analogs which were generated using the same method discussed in Section "Simulation of evolutionary pressure" in the main text.
     %\setlength{\textfloatsep}{0pt plus 1.0pt minus 1.0pt} % http://tex.stackexchange.com/questions/26521/how-to-change-the-spacing-between-figures-tables-and-text
