--- a/doc/sup/tex/04.real_nets_2_regs.tex
+++ b/doc/sup/tex/04.real_nets_2_regs.tex
@@ -1,11 +1,11 @@
-\input{/Users/unbaxabl/Downloads/Publishing/Papers/Paper_01/NatSysBio/sup/tex/01.preamble.tex}
+\input{/Volumes/DataHub/Publishing/Papers/Paper_01/NatSysBio/sup/tex/01.preamble.tex}
 %begin_custom_header
 %end_custom_header
 \begin{document}
 %begin_custom_content
 \newpage
 \subsection{Regulatory networks}\label{sup_realnets_reg}
-    Regulatory networks (details and references in Table \ref{tab:networks_summary_Reg}, raw data and source code available in  \cite{atiia_case-study_2017}) are all directed, with some being partially signed (RegulonDB and TRRUST). The nodes in regulatory networks can be transcription factors, genes (which can refer to the protein or mRNA), or small RNAs. All networks originally contain exclusively experimentally-validated interactions, with the exception of Liu and RegulonDB which contain computationally (\textit{in-silico}) inferred interactions which were excluded. In the case of RegulonDB, only interactions with  `strong' or `confirmed' experimental evidence are included, and since none of the interactions involving small RNAs had such evidence, they were eliminated. The remaining interactions were therefore exclusively between transcription factors. In miRTarBase networks, only interactions with strong experimental evidence (elucidated through reporter assays or western blot experiments) are included. Furthermore, interactions where the species of source and target genes are different were excluded (presumably, these original from  transgenic studies).
+    Regulatory networks (details and references in Table \ref{tab:networks_summary_Reg}, raw data and source code available in  \cite{atiia_case-study_2017}) are all directed, with some being partially signed (RegulonDB and TRRUST). Direction and sign were otherwise assigned randomly. The nodes in regulatory networks can be transcription factors, genes (which can refer to the protein or mRNA), or small RNAs. All networks originally contain exclusively experimentally-validated interactions, with the exception of Liu and RegulonDB which contain computationally (\textit{in-silico}) inferred interactions which were excluded. In the case of RegulonDB, only interactions with  `strong' or `confirmed' experimental evidence are included, and since none of the interactions involving small RNAs had such evidence, they were eliminated. The remaining interactions were therefore exclusively between transcription factors. In miRTarBase networks, only interactions with strong experimental evidence (elucidated through reporter assays or western blot experiments) are included. Furthermore, interactions where the species of source and target genes are different were excluded (presumably, these original from  transgenic studies).
 
     The ENCODE proximal network is an overall consolidated network of transcriptional interactions in humans, with some interactions being obtained by further consolidation with PPI network (detailed in supplementary materials of  \cite{gerstein_architecture_2012}). The other two ENCODE networks on the other hand are generated from specific human cell lines (GM and K562). The TRRUST network is unique in that it was obtained by data mining ${\sim}$20 million literature abstracts from  Medline (2014), out of which ${\sim}$23K sentences were nominated to contain potential descriptions of regulatory interactions  \cite{han_trrust:_2015}. These sentences underwent successive rounds of manual inspections. TRRUST network also includes information about the nature of interactions and the number of studies supporting it. For interactions deemed promotional by some studies and inhibitory by others, we picked the sign randomly by flipping a crooked coin proportional to the number of studies that support one type or another (for example, if 3 studies report an interaction as `promotional' and 1 reports it as `inhibitory', we would consider the interaction to be `promotional' with 75\% likelihood). TRRUST authors aimed to create a high-quality network that can serve as a gold-standard to other large-scale studies aiming to map transcriptome interactions in humans. The same crooked coin strategy was used in RegulonDB network. Figure SI \ref{fig:deg_dist_Reg} shows the degree distributions of regulatory networks and their corresponding synthetic analogs. Despite the diverse methods that were behind the mapping of these networks (in contrast to PPIs, where Y2H method is dominant), the mLmH property still holds with lower-degree nodes in particularly being of almost the same frequency in the majority of networks.
     \newpage
