--- a/doc/tex/10_data.tex
+++ b/doc/tex/10_data.tex
@@ -1,5 +1,5 @@
 \subsection{simulation of evolutionary pressure:}
-      NEP instances were generated on MINs (previously described in Figure \ref{mLmH_fig}, see also SI \ref{I-sup_realnets} for extensive details) as well as various synthetic networks. For each MIN, we computer-generated synthetic analog networks having the same number of node and/or edges. Figure \ref{deg_dist} (A) shows the degree distribution of an example real network (\textit{Drosophila melanogaster} (Fly) protein-protein interaction (PPI) network \cite{vinayagam_integrating_2014}).
+      NEP instances were generated on MINs (Figure \ref{mLmH_fig}) as well as various synthetic networks. The direction and sign were assigned randomly in MINs that are undirected and/or unsigned (detailed in SI \ref{I-sup_realnets}). For each MIN, we computer-generated synthetic analog networks having the same number of node and/or edges. Figure \ref{deg_dist} (A) shows the degree distribution of an example real network (\textit{Drosophila melanogaster} (Fly) protein-protein interaction (PPI) network \cite{vinayagam_integrating_2014}).
       %Although there are numerous large network datasets available,
       %very few have directed and signed edges (i.e. the nature of the interactions, whether inhibitory or promotional in nature, is unknown).
       %Directed-signed interaction networks available in KEGG for example are small in size.
