source code and data links to github not McGill repo

--- a/doc/tex/main.tex
+++ b/doc/tex/main.tex
@@ -55,12 +55,12 @@
 
     \noindent\textbf{{\large Data availability:}}  ~\\
 		\noindent\normalsize The data/reanalysis that support the findings of this study are publicly available online at: ~\\
-		\noindent\normalsize\href{http://cs.mcgill.ca/~malsha17/permlink/NETWORKS/}{http://cs.mcgill.ca/~malsha17/permlink/NETWORKS/}.~\\
+		\noindent\normalsize\href{https://github.com/aliatiia/evolution.by.computatioanl.selection/tree/master/data}{https://github.com/aliatiia/evolution.by.computatioanl.selection/tree/master/data}.~\\
 
     {\vspace{.15cm}
 
     \noindent\textbf{{\large Code availability:}} ~\\
-		\noindent\normalsize Model codes are available at \href{https://github.com/aliatiia/EvolByCompSel}{https://github.com/aliatiia/EvolByCompSel}.~\\
+		\noindent\normalsize Model codes are available at \href{https://github.com/aliatiia/evolution.by.computatioanl.selection/tree/master/src}{https://github.com/aliatiia/evolution.by.computatioanl.selection/tree/master/src}.~\\
 
     {\vspace{.15cm}
 
