--- a/doc/tex/06_RVnRS.tex
+++ b/doc/tex/06_RVnRS.tex
@@ -1,5 +1,5 @@
 \section{Optimization in Biological Context}\label{opt_in_bio_context}
-    Biological systems do not employ sophisticated search algorithms to determine the optimal conserve or mutate/delete actions from one generation to the next, but rather proceed thru iterations of RVnRS \cite{carvunis_proto-genes_2012}. This work shows the link between network topology and the number of needed RVnRS iterations before the composition (nodes) and connectivity (edges) of a network has sufficiently been transformed away from a deleterious state. We highlight the exponential increase in the required RVnRS iterations were the topology of biological network to deviate away from the mLmH topology. 
+    Biological systems do not employ sophisticated search algorithms to determine the optimal conserve or mutate/delete actions from one generation to the next, but rather proceed through iterations of RVnRS \cite{carvunis_proto-genes_2012}. This work shows the link between network topology and the number of needed RVnRS iterations before the composition (nodes) and connectivity (edges) of a network has sufficiently been transformed away from a deleterious state. We highlight the exponential increase in the required RVnRS iterations were the topology of biological network to deviate away from the mLmH topology. 
     %
     Particularly, this work shows that the number of RVnRS iterations is exponential in the number of ambiguous genes (those having non-zero score for both benefit and damage).
     %Corbin: "I feel like this needs one sentence before it explaining why unambiguous genes would requires less mutations, ect to resolve. it may help to emphasize that contradictory needs (or neighboring genes) exponentially increases the number of RVnRS rounds needed
