--- a/doc/tex/19_acmbcb.tex
+++ b/doc/tex/19_acmbcb.tex
@@ -1,5 +1,5 @@
 \subsection{simulated evolution and adaptation:}\label{evolution_results}
-    We conducted simulated network evolution and adaptation using an evolutionary algorithm that selects for networks that best minimize the difficulty of NEP instances generated against them. The simulation aims to assess the potency of NEP as a selection pressure that shapes network topology, rather than to mirror the details of recombination and mutation processes in biological systems. We conducted two sets of simulations depending on the starting conditions of synthetic networks. In the first, we begin with empty networks that grow over the generation by accumulating more nodes and edges. In the second, we begin by synthetic networks that have the same size (number of nodes and edges) as corresponding real MINs, which is kept unchanged from one generation to the next, but with an edges getting re-assigned randomly in each generation as a form of mutation. We refer to the first and second sets of simulations as 'evolution' and 'adaptation' simulations respectively. In both experiments, the idea is to examine the degree distribution of synthetic networks after iterations of random mutation non-random selection, and compare that  to the degree distribution of biological networks of equal size.
+    We conducted simulated network evolution and adaptation using an evolutionary algorithm that selects for networks that best minimize the difficulty of NEP instances generated against them. The simulation aims to assess the potency of NEP as a selection pressure that shapes network topology, rather than to mirror the details of recombination and mutation processes in biological systems. We conducted two sets of simulations depending on the starting conditions of synthetic networks. In the first, we begin with empty networks that grow over the generation by accumulating more nodes and edges. In the second, we begin by synthetic networks that have the same size (number of nodes and edges) as corresponding real MINs, which is kept unchanged from one generation to the next, but with an edges getting re-assigned randomly in each generation as a form of mutation. We refer to the first and second sets of simulations as 'evolution' and 'adaptation' simulations respectively. In both experiments, the idea is to examine the emerging degree distribution of synthetic networks after iterations of random mutation non-random selection, and compare that  to the degree distribution of biological networks of equal size.
 
     In simulated evolution, networks at the beginning of the simulation are near empty but are periodically assigned more new nodes and edges, in addition to being mutated by randomly re-assigning an existing edge to two randomly selected nodes. The simulation begins with a population of 60 near empty synthetic networks (8 nodes and $8r$ randomly assigned edges, where $r$ is the edge:node ($e2n$) ratio to be maintained throughout the simulation). An NEP instance against each network in the population is obtained by generating a random interaction-targeting OA, resulting in some interactions in the network being beneficial and others damaging. Nodes' benefit/damage scores are calculated (as illustrated previously by example in Figure \ref{fig:intro_fancy}, and further detailed in SI \ref{I-matrix_OA}). Assuming a tolerance threshold of 5\% of total damaging interactions network-wide, instances are solved to optimality (detailed further in SI \ref{I-sup_algorithmic_workflow}).
 
