--- a/doc/tex/main.tex
+++ b/doc/tex/main.tex
@@ -60,7 +60,14 @@
     {\vspace{.15cm}
 
     \noindent\textbf{{\large Code availability:}} ~\\
-		\noindent\normalsize Model codes are available at \href{https://github.com/aliatiia/evolution.by.computatioanl.selection/tree/master/src}{https://github.com/aliatiia/evolution.by.computatioanl.selection/tree/master/src}.~\\
+		\noindent\normalsize Simulation and data processing source code are available at: ~\\
+    \noindent\normalsize\href{https://github.com/aliatiia/evolution.by.computatioanl.selection/tree/master/src}{https://github.com/aliatiia/evolution.by.computatioanl.selection/tree/master/src}.~\\
+
+{\vspace{.15cm}
+
+    \noindent\textbf{{\large Funding:}} ~\\
+		\noindent\normalsize The authors declare no funding for this submission. ~\\
+
 
     {\vspace{.15cm}
 
